cmake_minimum_required(VERSION 3.1)
project( walle )
SET(COMPILE_DEFINITIONS -Werror)
find_package( OpenCV REQUIRED )
find_package(WiringPi REQUIRED)
include_directories(/opt/vc/include)
include_directories(/opt/vc/userland-master/interface/vcos)
include_directories(/opt/vc/userland-master)
include_directories(/opt/vc/userland-master/interface/vcos/pthreads)
include_directories(/opt/vc/userland-master/interface/vmcs_host/linux)
include_directories(/opt/vc/userland-master/host_applications/linux/libs/bcm_host/include)
include_directories(${WIRINGPI_INCLUDE_DIRS})
link_directories(/opt/vc/lib)
add_executable(walle main.cpp robot.cpp vision.cpp motor.cpp sensor.cpp utils/camera/camera.cpp utils/camera/cameracontrol.cpp utils/lib/I2Cdev.cpp utils/lib/VL53L0X.cpp utils/lib/HMC5883L.cpp)

target_link_libraries(walle libmmal_core.so libmmal_util.so libmmal_vc_client.so libvcos.so libbcm_host.so ncurses ${OpenCV_LIBS})
target_link_libraries(walle ${WIRINGPI_LIBRARIES})
